--- a/react/src/styles/page/_custom-file.scss
+++ b/react/src/styles/page/_custom-file.scss
@@ -21,6 +21,7 @@
     @extend .custon-file-pos;
     right: 10px;
     border-radius: 10px 25px;
+    height: 30px;
   }
   .span-file {
     @extend .custon-file-pos;
