--- a/react/src/styles/page/_contact.scss
+++ b/react/src/styles/page/_contact.scss
@@ -2,8 +2,9 @@
 
 #contact {
   width: 100%;
-  height: 120vh;
-  margin-top: 120px;
+  height: calc(100vh - 60px);
+  margin-top: 60px;
+
   .contact {
     display: flex;
     justify-content: space-between;
@@ -13,7 +14,7 @@
     height: 90%;
     gap: 20px;
     form {
-      width: 50%;
+      width: 45%;
       background: #222222;
       padding: 25px 0;
       display: flex;
@@ -32,7 +33,7 @@
     }
     .map {
       width: 45%;
-      height: 110%;
+      height: 100%;
       position: relative;
       z-index: 0;
       & > * {
@@ -51,13 +52,13 @@
       flex-direction: column;
       gap: 20px;
       .map {
-        width: 80%;
-        height: 300px;
+        width: 95%;
+        height: 40vh;
         position: relative;
         z-index: 1;
       }
       form {
-        width: 80%;
+        width: 95%;
       }
     }
   }
