--- a/react/src/styles/page/_custom-select.scss
+++ b/react/src/styles/page/_custom-select.scss
@@ -1,8 +1,8 @@
 @import "../variables.scss";
 
 .custom-select {
-  width: 150px;
-  height: 30px;
+  width: 200px;
+  height: 40px;
   background: var(--secondary);
   border-radius: 5px;
   position: relative;
@@ -25,7 +25,7 @@
   position: absolute;
   transform: translateY(-50%);
   color: var(--wheat);
-  font-size: 10px;
+  font-size: 1rem;
 
   cursor: pointer;
   &.arrow {
@@ -38,7 +38,7 @@
     gap: 5px;
     .value {
       margin-left: -2px;
-      font-size: 10px;
+      font-size: 1rem;
     }
   }
 }
@@ -57,11 +57,10 @@
   align-items: flex-start;
   padding: 3px 0;
   cursor: pointer;
-  font-size: 10px;
 }
 
 .select-country-par {
-  height: 30px;
+  height: 40px;
   width: 80%;
   margin: 0 auto;
   background-color: var(--main);
@@ -84,7 +83,8 @@
   .select-country {
     display: flex;
     justify-content: flex-start;
-    height: 20px;
+    height: 25px;
+
     width: 100%;
     img {
       width: 10px;
@@ -124,7 +124,7 @@
   p {
     overflow: hidden;
     display: -webkit-box;
-    max-height: 45px;
+    max-height: 55px;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
@@ -162,6 +162,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  display: inline-block;
   padding-left: 15px;
 }
 .compare-products {
@@ -169,6 +170,8 @@
   margin: 0 auto;
   display: flex;
   gap: 20px;
+  min-height: calc(100vh - 40px);
+  margin-top: 40px;
 }
 @media (max-width: 500px) {
   .compare-products {
