--- a/react/src/styles/page/_dropdown.scss
+++ b/react/src/styles/page/_dropdown.scss
@@ -7,12 +7,14 @@
 
   .fav-drop {
     padding: 4px;
-    width: 350px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
     background: var(--main);
     border-radius: 5px;
     overflow: hidden auto;
     color: var(--secondary);
+    box-shadow: var(--secondary-shadow);
+    top: 30px !important;
     button {
       box-shadow: initial;
     }
