--- a/react/src/styles/page/_nav.scss
+++ b/react/src/styles/page/_nav.scss
@@ -2,14 +2,14 @@
 nav {
   width: 100%;
   max-width: 100%;
-  height: 40px;
+  height: 45px;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 5;
   display: flex;
   justify-content: space-between;
-  padding: 0 20px;
+  padding: 0 25px;
 
   .links-par {
     display: flex;
@@ -166,9 +166,6 @@ nav {
 
 #logo-svg {
   filter: drop-shadow(var(--third-shadow));
+  transition: 0.3s;
+  transform-origin: 0 0;
 }
-
-// .auth-par {
-//   width: 60px;
-//   justify-content: flex-end;
-// }
