--- a/react/src/styles/page/_product.scss
+++ b/react/src/styles/page/_product.scss
@@ -16,8 +16,9 @@
     height: 80%;
     flex-direction: column;
     justify-content: center;
-
-    gap: 15px;
+    align-self: flex-end;
+    gap: 25px;
+    margin-bottom: 40px;
     .big-img-par {
       width: 100%;
       height: 350px;
@@ -48,22 +49,21 @@
     .small-img-par {
       align-self: center;
 
-      height: 60px;
+      height: 100px;
       min-width: 300px;
       justify-content: center;
-      align-items: center;
-      gap: 5px;
+      align-items: flex-end;
+      gap: 2px;
       position: relative;
 
       .small-img {
-        padding: 5px;
-        height: 50px;
-        width: clamp(50px, 9vw, 70px);
+        padding: 2px;
+        height: 100px;
+        width: clamp(50px, 15vw, 100px);
 
         img {
-          height: 50px;
-          width: clamp(50px, 9vw, 70px);
-
+          height: 100%;
+          width: 100%;
           object-fit: contain;
           filter: drop-shadow(1.5px 4px 1.5px black);
         }
@@ -238,7 +238,7 @@ p {
     min-height: 100vh;
     flex-direction: column;
     justify-content: center;
-
+    gap: 10px;
     .details {
       width: 95%;
     }
@@ -247,6 +247,7 @@ p {
       margin: 0 auto;
       overflow: hidden;
       height: fit-content;
+      margin-top: 50px;
       .small-img-par {
         align-self: center;
         align-items: center;
