--- a/react/src/styles/page/login.scss
+++ b/react/src/styles/page/login.scss
@@ -31,7 +31,7 @@
     }
   }
   .google-log {
-    height: 30px;
+    height: 40px;
     padding: 0 10px;
     border-radius: 5px;
     justify-content: flex-start;
@@ -48,9 +48,7 @@
   }
   form {
     background: #222222;
-    width: 95vw;
-    max-width: 350px;
-    min-width: 260px;
+    width: clamp(320px, 95vw, 400px);
     height: fit-content;
     padding: 20px 0;
     border-radius: 5px;
@@ -58,14 +56,13 @@
     box-shadow: 0.5px 0.5px 2px black;
     padding-bottom: 40px;
 
-    // gap: 10px;
     gap: 25px;
     overflow: hidden;
     h2 {
       color: white;
     }
     input {
-      height: 30px;
+      height: 40px;
       padding-right: 20px;
       background-color: var(--main);
       color: var(--third);
@@ -73,7 +70,7 @@
       border-radius: 5px;
     }
     button {
-      height: 30px;
+      height: 40px;
 
       margin: 0 auto;
     }
