--- a/react/src/styles/globels/globales.scss
+++ b/react/src/styles/globels/globales.scss
@@ -29,7 +29,7 @@ a {
 }
 
 *::-webkit-scrollbar-thumb {
-  background: var(--wheat);
+  background: rgb(194, 174, 138);
   border-radius: 40px;
 }
 
