--- a/react/src/styles/page/_nav.scss
+++ b/react/src/styles/page/_nav.scss
@@ -10,7 +10,7 @@ nav {
   display: flex;
   justify-content: space-between;
   padding: 0 25px;
-
+  transition: 0.1s;
   .links-par {
     display: flex;
   }
