--- a/react/src/styles/page/_dropdown.scss
+++ b/react/src/styles/page/_dropdown.scss
@@ -35,7 +35,7 @@
       height: 100px;
       display: flex;
       justify-content: center;
-      // background: var(--wheat-lighter);
+      background: var(--wheat-lighter);
 
       position: relative;
       color: var(--main);
