--- a/react/src/styles/globels/globales.css
+++ b/react/src/styles/globels/globales.css
@@ -1,6 +1,6 @@
 :root {
   --green: #237a44;
-  --wheat: rgb(202, 170, 109);
+  --wheat: rgb(170, 136, 73);
   --white: rgb(247, 246, 246);
   --wheat-light: #c5af87c9;
   --wheat-lighter: #dcccaec9;
@@ -26,24 +26,13 @@
   --admin: rgb(4, 81, 4);
   --delivered: var(--sale);
   --moderator: var(--sale);
+  --nav-btn: #237a44;
   --main-shadow: 0.75px 0.75px 1.5px black;
   --secondary-shadow: 0.5px 0.5px 1.5px black;
   --third-shadow: 0.5px 0.5px 0.5px black;
   --forth-shadow: 0.3px 0.3px 0.2px black;
 }
 
-@font-face {
-  font-family: "Fexien Sans";
-  src: url("/fonts/studio-feixen-sans-variable.woff2") format("woff2");
-  font-weight: 400 1000;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Kyiv Sans";
-  src: url("/fonts/Kyiv-sans.woff2") format("woff2-variations");
-  font-weight: 100 1000;
-  font-display: swap;
-}
 * {
   margin: 0;
   padding: 0;
@@ -51,13 +40,13 @@
 }
 
 body {
-  font-family: "PT Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
   overflow-x: hidden;
   background: linear-gradient(120deg, var(--forth), var(--main));
 }
 
 :root {
-  font-size: clamp(12px, 1vw, 14px);
+  font-size: clamp(12px, 1vw, 16px);
 }
 
 a {
@@ -73,7 +62,7 @@ a {
 }
 
 *::-webkit-scrollbar-thumb {
-  background: var(--wheat);
+  background: rgb(194, 174, 138);
   border-radius: 40px;
 }
 
@@ -81,8 +70,4 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
-}
-
-p {
-  font-family: "PT Sans", sans-serif;
 }/*# sourceMappingURL=globales.css.map */
