--- a/react/src/styles/App.css
+++ b/react/src/styles/App.css
@@ -2615,6 +2615,7 @@ svg.svg-star {
   border-radius: 10px;
   box-shadow: var(--forth-shadow);
   overflow: hidden;
+  margin-top: 20px;
 }
 
 .products-animate {
@@ -2624,6 +2625,7 @@ svg.svg-star {
   position: relative;
   height: 18vw;
   width: 18vw;
+  margin: 0 auto;
 }
 .products-animate .products-animate-img {
   height: 16vw;
@@ -5037,20 +5039,6 @@ a.crumb-link {
   letter-spacing: 1px;
 }
 
-div.dash-nav {
-  position: fixed;
-  top: 0px;
-  padding: 0 10px;
-  height: 40px;
-  right: 0;
-  z-index: 5;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: var(--forth);
-  transition: 0.3s;
-}
-
 .notification-par {
   height: 350px;
   width: 350px;
@@ -5164,6 +5152,20 @@ div.dash-nav {
   top: 0;
   left: 0;
   height: 100%;
+}
+
+div.dash-nav {
+  position: fixed;
+  top: 0px;
+  padding: 0 10px;
+  height: 40px;
+  right: 0;
+  z-index: 5;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: var --main;
+  transition: 0.3s;
 }
 
 :root {
