--- a/react/src/styles/page/_products.scss
+++ b/react/src/styles/page/_products.scss
@@ -381,6 +381,7 @@ svg.svg-star {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
   .swiper-coverflow {
     padding: 30px 0;
   }
