--- a/react/src/components/dashboard/Notification/notification.scss
+++ b/react/src/components/dashboard/Notification/notification.scss
@@ -33,7 +33,7 @@
     }
   }
   .notification {
-    background: var(--secondary);
+    background: var(--main);
     box-shadow: 0.2px 0.2px 0.5px black;
     display: flex;
     flex-direction: column;
@@ -53,7 +53,8 @@
     }
     .time {
       font-size: 0.6rem;
-      color: var(--twitter);
+      color: var(--third-light);
+      opacity: 0.7;
       font-weight: bold;
     }
     .dots {
