--- a/react/src/styles/page/_cart.scss
+++ b/react/src/styles/page/_cart.scss
@@ -33,7 +33,12 @@
       width: 100%;
       height: 200px;
       padding: 5px;
-      background: var(--secondary);
+      background: linear-gradient(
+        to right,
+        var(--secondary),
+        var(--main) 50%,
+        rgba(132, 126, 113, 0.3)
+      );
       box-shadow: var(--secondary-shadow);
       position: relative;
       display: flex;
